--- a/Documentation/ou-supps.tex
+++ b/Documentation/ou-supps.tex
@@ -44,7 +44,7 @@
 suggestions go to \href{https://github.com/rbrignall/OU-SUPPS}%
 {\texttt{https://github.com/rbrignall/OU-SUPPS}}.}}
 
-\date{Version 1.3\\2016-08-27}
+\date{Version 1.31\\2016-08-27}
 
 \IfFileExists{enumitem.sty}{\usepackage{enumitem}}{}
 
@@ -670,6 +670,11 @@ Sets the session code for the exam (required, except for |specimen| and |seconds
 |\moduletitle{...}|
 \end{desc}
 Sets the title (i.e./ name) of the module (required).
+
+\begin{desc}
+|\specimensolutionstitle{...}|
+\end{desc}
+Optional. Sets the title that appears at the top of the specimen solutions in |specimensolutions| mode. Default is ``Solutions to the second examination paper''. It has no function in other modes.
 
 \begin{desc}
 |\examcode{<code>}|
